updated amplify and cognito config

--- a/frontend/amplify/backend/backend-config.json
+++ b/frontend/amplify/backend/backend-config.json
@@ -1,6 +1,6 @@
 {
   "auth": {
-    "realease5b6554ba": {
+    "realease31c244ab": {
       "customAuth": false,
       "dependsOn": [],
       "frontendAuthConfig": {
