--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -9,7 +9,7 @@ amplify/mock-api-resources
 amplify/backend/amplify-meta.json
 amplify/backend/.temp
 build/
-dist/
+/dist/
 node_modules/
 aws-exports.js
 awsconfiguration.json
